# javelin_tracker

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.venv39/: pyvenv.cfg
config/: feedback_rules.json
debug_assets/: README.md
demo/: demo_sessions.csv  demo_sessions.json
docs/: INSTALL.md  RELEASING.md  debug_env.md  demo-sandbox.md  methods.md  privacy.md  schema.md
export/: sessions_20251107-112457.csv  sessions_20251107-112457.json  sessions_20251107-112457.parquet  sessions_20251107-112457_metadata.json
javelin_tracker/: __init__.py  analysis.py  cli.py  config.py  constants.py  env.py  metrics.py  models.py  reports.py  services.py  storage.py
javelin_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
javelin_tracker/biomechanics/: README.md  __init__.py  config.py
javelin_tracker/biomechanics/comparison/: __init__.py  dtw.py  reporter.py  scoring.py
javelin_tracker/biomechanics/database/: __init__.py  elite_reference.py  (+1 more)
javelin_tracker/webapp/: __init__.py  __main__.py  routes_biomechanics.py
scripts/: biomech_repro.py  debug_env.py  docker-entrypoint.sh  generate_demo_data.py  process_elite_database.py
tests/: test_analysis.py  test_biomech_repro_script.py  test_biomechanics.py  test_biomechanics_angles.py  test_biomechanics_api_routes.py  test_biomechanics_dtw.py  test_biomechanics_feedback_generator.py  test_biomechanics_feedback_rules.py  test_biomechanics_kinematics.py  test_biomechanics_metrics_pipeline.py  test_biomechanics_normalization.py  test_biomechanics_phase2.py  test_biomechanics_reporter.py  test_biomechanics_scoring.py  test_biomechanics_style_aware_comparison.py  test_biomechanics_throw_metrics.py  test_debug_env_script.py  test_elite_database_init.py  test_elite_db_cli.py  test_elite_reference_profile.py  test_elite_style_profiles.py  test_elite_validation_qc.py  test_metrics.py  test_optical_flow_refiner.py  test_pose_detector_segmentation_helpers.py  test_process_elite_database.py  test_session_biomechanics_storage.py  test_smoke_cli.py  test_storage.py  test_workout_adaptation.py
throws_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+39 files in other folders)
